--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 MinGL : https://github.com/alain13100/MinGL2_IUT_AIX
 
 Auteurs :
-github.com/Thomas776 (Moi)
+https://github.com/ThomasRubini (Moi)
 https://github.com/imuny0
 https://github.com/Neotaku67
 
